<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.dmk.core</groupId>
    <artifactId>PVPCore</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>

    <properties>
        <maven.compiler.source>19</maven.compiler.source>
        <maven.compiler.target>19</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <!-- Spigot -->
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>

        <!-- Okaeri -->
        <repository>
            <id>okaeri-repo</id>
            <url>https://storehouse.okaeri.eu/repository/maven-public/</url>
        </repository>

        <!-- Panda -->
        <repository>
            <id>panda-repository</id>
            <url>https://repo.panda-lang.org/releases</url>
        </repository>

        <!-- CodeMC -->
        <repository>
            <id>codemc-snapshots</id>
            <url>https://repo.codemc.io/repository/maven-snapshots/</url>
        </repository>
        <repository>
            <id>codemc-releases</id>
            <url>https://repo.codemc.org/repository/maven-releases/</url>
        </repository>

        <!-- ProtocolLib -->
        <repository>
            <id>dmulloy2-repo</id>
            <url>https://repo.dmulloy2.net/repository/public/</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Minimessage -->
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-minimessage</artifactId>
            <version>4.12.0</version>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-platform-bukkit</artifactId>
            <version>4.2.0</version>
        </dependency>

        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.26</version>
            <scope>provided</scope>
        </dependency>

        <!-- Caffeine -->
        <dependency>
            <groupId>com.github.ben-manes.caffeine</groupId>
            <artifactId>caffeine</artifactId>
            <version>3.1.2</version>
        </dependency>

        <!-- Spigot -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.19-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- Okaeri -->
        <dependency>
            <groupId>eu.okaeri</groupId>
            <artifactId>okaeri-configs-yaml-bukkit</artifactId>
            <version>5.0.0-beta.4</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>eu.okaeri</groupId>
            <artifactId>okaeri-configs-serdes-bukkit</artifactId>
            <version>5.0.0-beta.4</version>
            <scope>compile</scope>
        </dependency>

        <!-- MongoDB -->
        <dependency>
            <groupId>org.mongodb</groupId>
            <artifactId>mongo-java-driver</artifactId>
            <version>3.12.12</version>
        </dependency>

        <!-- LuckPerms -->
        <dependency>
            <groupId>net.luckperms</groupId>
            <artifactId>api</artifactId>
            <version>5.4</version>
            <scope>provided</scope>
        </dependency>

        <!-- TriumphGUI -->
        <dependency>
            <groupId>dev.triumphteam</groupId>
            <artifactId>triumph-gui</artifactId>
            <version>3.1.4</version>
        </dependency>

        <!-- LiteCommands -->
        <dependency>
            <groupId>dev.rollczi.litecommands</groupId>
            <artifactId>core</artifactId>
            <version>2.8.5</version>
        </dependency>
        <dependency>
            <groupId>dev.rollczi.litecommands</groupId>
            <artifactId>bukkit-adventure</artifactId>
            <version>2.8.5</version>
        </dependency>

        <!-- ProtocolLib -->
        <dependency>
            <groupId>com.comphenix.protocol</groupId>
            <artifactId>ProtocolLib</artifactId>
            <version>5.0.0-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- FastBoard -->
        <dependency>
            <groupId>fr.mrmicky</groupId>
            <artifactId>fastboard</artifactId>
            <version>2.0.0</version>
        </dependency>

        <!-- SkinsRestorer -->
        <dependency>
            <groupId>net.skinsrestorer</groupId>
            <artifactId>skinsrestorer-api</artifactId>
            <version>14.2.8</version>
            <scope>provided</scope>
        </dependency>

        <!-- Apache commands -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.4.1</version>
                <configuration>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>module-info.class</exclude>
                                <exclude>**/module-info.class</exclude>
                                <exclude>META-INF/*.SF</exclude>
                                <exclude>META-INF/*.MF</exclude>
                                <exclude>META-INF/*.DSA</exclude>
                                <exclude>META-INF/*.RSA</exclude>
                            </excludes>
                        </filter>
                    </filters>
                    <relocations>
                        <relocation>
                            <pattern>dev.rollczi.litecommands</pattern>
                            <shadedPattern>me.dmk.core.dev.rollczi.litecommands</shadedPattern>
                        </relocation>

                        <relocation>
                            <pattern>fr.mrmicky.fastboard</pattern>
                            <shadedPattern>me.dmk.core.fastboard</shadedPattern>
                        </relocation>

                        <relocation>
                            <pattern>dev.triumphteam.gui</pattern>
                            <shadedPattern>me.dmk.core.gui</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>
</project>